Fixing the why controller so that the content doesn't invisibly extend below and mess up the clickable area.

--- a/src/static/styles/base.sass
+++ b/src/static/styles/base.sass
@@ -136,8 +136,8 @@ body
       border-bottom: none
       font-size: 150%
 
-      &:last-of-type
-        border-right: 1px solid nth($green_variants, 1)
+      &:first-of-type
+        border-left: none
 
   #about
     margin-bottom: 1.5em
